examples/negative/parse_errors/L3/6_proc_no_end.ob
MODULE ProcNoEnd;

PROCEDURE FOO;
  CONST x = 3;

END ProcNoEnd.
